--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-School</title>
+    <link rel="stylesheet" href="styles/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italianno&family=Open+Sans:ital,wght@0,800;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Triodion&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div>
+                <img src="ICON/Logo.png" alt="">
+            </div>
+            <div>
+                <ul>
+                    <li><a href="">Books</a></li>
+                    <li><a href="">Courses</a></li>
+                    <li><a href="">Others</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li> <button class="btn-primary">Sing in</button> </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="header-banner">
+            <div class="header-banner-column">
+                <p class="question">Are you ready to Learn?</p>
+                <h3 class="banner-title">
+                    Learn With fun <br>on <span class="schedule">any schedule</span> 
+                </h3>
+                <p class="description-color">
+                    Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit. Varius blandit facilisis quam netus.
+                </p>
+                <button class="btn-primary">Get Started</button>
+            </div>
+            <div class="header-banner-column">
+                <img src="Photos/Illustration.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
