added testimonial section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italianno&family=Open+Sans:ital,wght@0,800;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Triodion&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <header>
         <nav>
@@ -33,7 +38,7 @@
             <div class="header-banner-column">
                 <p class="question">Are you ready to Learn?</p>
                 <h3 class="banner-title">
-                    Learn With fun <br>on <span class="schedule">any schedule</span> 
+                    Learn With fun <br>on <span class="schedule">any schedule</span>
                 </h3>
                 <p class="description-color">
                     Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit. Varius blandit facilisis quam netus.
@@ -45,6 +50,110 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="study-card-container">
+            <div class="study-card">
+                <img src="ICON/book.png" alt="">
+                <h3 class="card-title">1500+ Topic</h3>
+                <p class="card-description">Learn Anythings</p>
+            </div>
+            <div class="study-card">
+                <img src="ICON/Student.png" alt="">
+                <h3 class="card-title">1500+ Topic</h3>
+                <p class="card-description">Learn Anythings</p>
+            </div>
+            <div class="study-card">
+                <img src="ICON/Test.png" alt="">
+                <h3 class="card-title">1500+ Topic</h3>
+                <p class="card-description">Learn Anythings</p>
+            </div>
+            <div class="study-card">
+                <img src="ICON/Students.png" alt="">
+                <h3 class="card-title">1500+ Topic</h3>
+                <p class="card-description">Learn Anythings</p>
+            </div>
+        </section>
+        <section class="course-section">
+            <h3 class="section-title">Online Courses</h3>
+            <div class="course-card-container">
+                <div class="course-card">
+                    <img src="Photos/Morder pyschology.png" alt="">
+                    <h3 class="card-title">Modern Psychology</h3>
+                    <p class="card-description">Designation</p>
+                    <button class="btn-primary">Buy Course</button>
+                    <div class="date-seat">
+                        <div class="date">
+                            <p class="card-description">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                Start 20 April, 2021
+                            </p>
+                        </div>
+                        <div class="seat">
+                            <p class="card-description">
+                                <i class="fa-solid fa-person"></i>
+                                60 seats
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="Photos/Morder psyc.png" alt="">
+                    <h3 class="card-title">Modern Psychology</h3>
+                    <p class="card-description">Designation</p>
+                    <button class="btn-primary">Buy Course</button>
+                    <div class="date-seat">
+                        <div class="date">
+                            <p class="card-description">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                Start 20 April, 2021
+                            </p>
+                        </div>
+                        <div class="seat">
+                            <p class="card-description">
+                                <i class="fa-solid fa-person"></i>
+                                60 seats
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <img src="Photos/Morder pychons.png" alt="">
+                    <h3 class="card-title">Modern Psychology</h3>
+                    <p class="card-description">Designation</p>
+                    <button class="btn-primary">Buy Course</button>
+                    <div class="date-seat">
+                        <div class="date">
+                            <p class="card-description">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                Start 20 April, 2021
+                            </p>
+                        </div>
+                        <div class="seat">
+                            <p class="card-description">
+                                <i class="fa-solid fa-person"></i>
+                                60 seats
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="testimonial-section">
+            <h3 class="section-title">
+                Testimonial
+            </h3>
+            <div class="testimonial-column">
+                <div>
+                    <img src="Photos/Man.png" alt="">
+                </div>
+                <div>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the <br>majority have suffered alteration in some form, by injected humour, <br>or randomised words which don't look even slightly believable.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
