added footer section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,47 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="footer-column-container">
+            <div class="footer-column">
+                <p>Millions of people of all ages and from around <br>
+                    the world are improving their lives with us</p>
+            </div>
+            <div class="footer-column">
+                <ul>
+                    <li><h4>Course</h4></li>
+                    <li>Graphic Design</li>
+                    <li>Web Design</li>
+                    <li>Business</li>
+                    <li>Marketing</li>
+                    <li>Engineering</li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <ul>
+                    <li><h4>Terms</h4></li>
+                    <li>Graphic Design</li>
+                    <li>Web Design</li>
+                    <li>Business</li>
+                    <li>Marketing</li>
+                    <li>Engineering</li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <ul>
+                    <li><h4>Useful Link</h4></li>
+                    <li>Graphic Design</li>
+                    <li>Web Design</li>
+                    <li>Business</li>
+                    <li>Marketing</li>
+                    <li>Engineering</li>
+                </ul>
+            </div>
+        </section>
+        <p class="website-link">
+            Copyright © 2020 Rokomari.com
+        </p>
+    </footer>
 </body>
 
 </html>
